welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:21: error: not found: value c
	setCouleurBrosse(c);
                         ^FlowerPot:5: error: not found: value RED
faireFle(RED);
         ^FlowerPot:7: error: not found: value CYAN
faireFle(CYAN)
         ^FlowerPot:11: error: not found: value ORANGE
faireFle(ORANGE)
         ^FlowerPot:16: error: not found: value GREEN
faireFle(GREEN)
         ^FlowerPot:18: error: not found: value PINK
faireFle(PINK)
         ^